# tunnlr

./: .editorconfig  .gitignore  Cargo.toml  Directory.Build.props  Dockerfile.Client  Dockerfile.Proxy  README.md  Tunnlr.sln  self-hosting.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-clients.yml  docker-build.yml  playwright.yml  sonarcloud.yml
.run/: Proxy and Web UI.run.xml
src/Tunnlr.Client.Core/: Http.cs  Tunnlr.Client.Core.csproj
src/Tunnlr.Client.Core/Handlers/: RequestHandler.cs
src/Tunnlr.Client.Core/Models/: Request.cs  RequestBase.cs  Response.cs  Tunnel.cs
src/Tunnlr.Client.Core/Services/: DomainsService.cs  TunnelService.cs
src/Tunnlr.Client.Web/: .editorconfig  App.razor  Browser.cs  Program.cs  Tunnlr.Client.Web.csproj  appsettings.json
src/Tunnlr.Client.Web/Extensions/: Auth0.cs  ServiceExtensions.cs
src/Tunnlr.Client.Web/Pages/: Error.cshtml.cs  Index.razor  Login.razor  Logout.razor  Requests.razor  ReservedDomains.razor  Tunnels.razor  _Host.cshtml  _Layout.cshtml
src/Tunnlr.Client.Wrapper/: main.rs
src/Tunnlr.Common/: Helpers.cs  Tunnlr.Common.csproj
src/Tunnlr.Server.Core/: Tunnlr.Server.Core.csproj
src/Tunnlr.Server.Persistence/: Builder.cs  Configurator.cs  PostgreSqlDbContext.cs  SqliteDbContext.cs  Tunnlr.Server.Persistence.csproj  TunnlrDbContext.cs
src/Tunnlr.Server.Proxy/: Program.cs  TunnelMiddleware.cs  Tunnlr.Server.Proxy.csproj  appsettings.Development.json  appsettings.json
test/e2e/: docker-compose.yml  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
(+205 files in other folders)
