[package]
name = "Tunnlr_Client_Wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "5.0.0"
wry = "0.30.0"

[[bin]]
name = "Tunnlr_Client_Wrapper"
path = "src/Tunnlr.Client.Wrapper/main.rs"
