[package]
name = "Tunnlr_Client_Wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = { version = "^0.7.3", features = ["glob"] }
open = "5.0.0"
reqwest = "0.11.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wry = "0.30.0"

[[bin]]
name = "Tunnlr"
path = "src/Tunnlr.Client.Wrapper/main.rs"
